--- a/css/style.css
+++ b/css/style.css
@@ -12,18 +12,14 @@ body {
   background-image: url("zenbg-1.png"), url("zenbg-2.png");
   background-repeat: repeat-x, repeat;
   transition: opacity 0.5s ease-in-out;
-
-}
-
-#placeholder {
-  width: 0;
-  height: 0;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 h1 {
   font-size: 60px;
   color: azure;
-  text-shadow: 0 3px 1px rgba(122, 17, 8, .8);
+  text-shadow: 0 3px 1px rgba(122, 17, 8, 0.8);
 }
 
 #button-container {
@@ -45,11 +41,10 @@ h1 {
   font-weight: 900;
   font-size: 2.5rem;
   background: red;
-  text-shadow: 0 3px 1px rgba(122, 17, 8, .8);
-  box-shadow: 0 8px 0 rgb(183, 9, 0),
-    0 15px 20px rgba(0, 0, 0, .35);
+  text-shadow: 0 3px 1px rgba(122, 17, 8, 0.8);
+  box-shadow: 0 8px 0 rgb(183, 9, 0), 0 15px 20px rgba(0, 0, 0, 0.35);
   text-transform: uppercase;
-  transition: .4s all ease-in;
+  transition: 0.4s all ease-in;
   outline: none;
   cursor: pointer;
   text-align: center;
@@ -61,8 +56,7 @@ h1 {
 #record-button:focus {
   padding-top: 3px;
   transform: translateY(4px);
-  box-shadow: 0 4px 0 rgb(183, 0, 0),
-    0 8px 6px rgba(0, 0, 0, .45);
+  box-shadow: 0 4px 0 rgb(183, 0, 0), 0 8px 6px rgba(0, 0, 0, 0.45);
 }
 
 select {
@@ -90,7 +84,6 @@ select {
   background-repeat: repeat-x, repeat;
   text-shadow: 0px 0px 15px rgb(0 0 0 / 80%);
   transition: display 0.5s ease-in-out;
-
 }
 
 .img-preview {
@@ -110,7 +103,6 @@ video {
   -webkit-box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 0px 10px 12px rgba(0, 0, 0, 0.5);
 }
-
 
 video.big {
   width: 100%;
@@ -154,6 +146,14 @@ video.big {
   top: 0;
 }
 
+#bottom {
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(3px) brightness(2.2);
+  text-align: center;
+}
+
 .photostream-container {
   width: inherit;
   height: inherit;
@@ -170,7 +170,7 @@ video.big {
   display: block;
   width: auto;
   max-height: 33%;
-  margin: 5px
+  margin: 5px;
 }
 
 .primary {
@@ -200,7 +200,6 @@ video.big {
     top: 0%;
   }
 }
-
 
 .lds-roller {
   display: inline-block;
